--- a/po/de.po
+++ b/po/de.po
@@ -751,13 +751,13 @@ msgid "Allows you setup the button to do what you choose."
 msgstr "Erlaubt dir zu bestimmen was die gewählte Taste macht."
 
 msgid "Allows you to choose the Picons to be displayed on the frontpanel."
-msgstr "Diese Option bestimmt ob PIcons für das Display am Gerät angezeigt werden sollen."
+msgstr "Diese Option bestimmt ob Picons für das Display am Gerät angezeigt werden sollen."
 
 msgid "Allows you to enable the debug log. They contain very detailed information of everything the system does."
 msgstr "Debug Log erlauben. Das Debug Log enthält detailierte Informationen über alles was das System macht."
 
 msgid "Allows you to enable/disable displaying icons on the frontpanel."
-msgstr "Anzeige von PIcons auf dem Display am Gerät erlauben."
+msgstr "Anzeige von Icons auf dem Display am Gerät erlauben."
 
 msgid "Allows you to send a copy of the log to yourself."
 msgstr "Erlaubt es dir eine Kopie an dich selbst zu schicken."
@@ -6136,7 +6136,7 @@ msgid "Show PVR status in MoviePlayer infobar"
 msgstr "Zeige PVR Status in der Infobar des Medienplayers"
 
 msgid "Show Picons *"
-msgstr "Zeige PIcons*"
+msgstr "Zeige LCD Picons *"
 
 msgid "Show RFmod setup..."
 msgstr "Zeige UHF Modulator Einstellungen..."
@@ -7093,7 +7093,7 @@ msgid "This option allows you choose how to display the remaining/elapsed time f
 msgstr "Diese Option erlaubt dir zu wählen ob verbleibende/verstrichene Zeit oder beides bei Medienwiedergabe angezeigt wird."
 
 msgid "This option allows you choose the background colour of transparent picons."
-msgstr "Diese Option erlaubt es die Hintergrundfarbe von transparenten PIcons festzulegen."
+msgstr "Diese Option erlaubt es die Hintergrundfarbe von transparenten Picons festzulegen."
 
 msgid "This option allows you set the layout view (Text or Graphics)."
 msgstr "Diese Option erlaubt es das Aussehen vom EPG einzustellen (Text oder Grafik)."
