--- a/po/de.po
+++ b/po/de.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-23 15:49+0000\n"
 "PO-Revision-Date: 2012-12-24 04:52+0100\n"
-"Last-Translator: Rob van der Does <robvddoes@gmail.com>\n"
-"Language-Team: AndyBlacburn, j-ot&Trial\n"
+"Last-Translator: Henry Schrapel  <dende@hdfreaks.cc>\n"
+"Language-Team: henrylicious, HDF-Betatester\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2225,7 +2225,7 @@ msgid "Display message before playing next movie"
 msgstr "Nachricht vor Wiedergabe des nächsten Films"
 
 msgid "Display settings"
-msgstr "Anzeige Einstellungen"
+msgstr "Display Einstellungen"
 
 msgid "Display the EIT now/next eventdata in infobar."
 msgstr "EIT jetzt/demnächst in Infobar anzeigen"
@@ -5342,7 +5342,7 @@ msgid "Renamed %s!"
 msgstr "%s umbenannt!"
 
 msgid "Repeat Display Message"
-msgstr "Nachricht wiederholen"
+msgstr "Display Nachricht wiederholen"
 
 msgid "Repeat type"
 msgstr "Wiederholungstyp"
@@ -6153,8 +6153,8 @@ msgstr "Zeige Timerliste"
 msgid "Show Transponder Remaining/Elapsed as"
 msgstr "Zeige Transponder verbleibend/verstrichen"
 
-msgid "Show ViX spinning logo when system is busy."
-msgstr "Zeige die ViX-Animation wenn das System beschäftigt ist."
+msgid "Show spinning logo when system is busy."
+msgstr "Zeige den Spinner, wenn das System beschäftigt ist."
 
 msgid "Show WLAN status"
 msgstr "Zeige WLAN-Status"
